Added content in contact

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    it's contact
-</body>
+<body>   
+    contact it is
+ </body>
 </html>
